<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.a0gmail.iancampos.rewardtracker.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Spend"
        android:id="@+id/spendButton"
        android:layout_marginTop="54dp"
        android:onClick="spendButtonClicked"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/spendField"
        android:layout_alignBottom="@+id/spendButton"
        android:layout_toRightOf="@+id/spendButton"
        android:layout_toEndOf="@+id/spendButton"
        android:width="96dp"
        android:text="0"
        android:inputType="numberDecimal" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rewardSpinner"
        android:layout_alignTop="@+id/spendButton"
        android:layout_toRightOf="@+id/spendField"
        android:spinnerMode="dropdown"
        android:contextClickable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/spendField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Reward Name:"
        android:id="@+id/textView2"
        android:height="48dp"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rewardNameField"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/dailyLimitField"
        android:layout_alignStart="@+id/dailyLimitField"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Daily Limit:"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:height="48dp"
        android:gravity="center_vertical"
        android:layout_toLeftOf="@+id/rewardNameField"
        android:layout_toStartOf="@+id/rewardNameField" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/dailyLimitField"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:id="@+id/resetButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:onClick="resetButtonClicked" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Reward"
            android:id="@+id/newRewardButton"
            android:onClick="newRewardButtonClicked"
            android:layout_above="@+id/resetButton"
            android:layout_toRightOf="@+id/spendButton"
            android:layout_toEndOf="@+id/spendButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete Reward"
            android:id="@+id/deleteRewardButton"
            android:layout_alignTop="@+id/newRewardButton"
            android:layout_toRightOf="@+id/newRewardButton"
            android:layout_toEndOf="@+id/newRewardButton"
            android:onClick="deleteRewardButtonClicked" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Points: 0"
            android:id="@+id/pointsText"
            android:height="64dp"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/spendButton"
            android:layout_toEndOf="@+id/spendButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Point"
            android:id="@+id/addPointButton"
            android:layout_above="@+id/spendButton"
            android:layout_alignLeft="@+id/deleteRewardButton"
            android:layout_alignStart="@+id/deleteRewardButton"
            android:layout_alignTop="@+id/pointsText"
            android:onClick="addPointButtonClicked" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Price:"
        android:id="@+id/textView"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:height="48dp"
        android:gravity="center_vertical"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0"
        android:id="@+id/priceText"
        android:layout_below="@+id/dailyLimitField"
        android:height="48dp"
        android:layout_alignRight="@+id/dailyLimitField"
        android:layout_alignEnd="@+id/dailyLimitField"
        android:gravity="center_vertical"
        android:textColor="#000000"
        android:layout_alignLeft="@+id/dailyLimitField"
        android:layout_alignStart="@+id/dailyLimitField"
        android:paddingLeft="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="for 0 points."
        android:id="@+id/costText"
        android:layout_below="@+id/spendButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
